PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2015, PHP 5.5.25

- Core:
  . Fixed bug #69420 (Invalid read in zend_std_get_method). (Laruence)
  . Fixed bug #60022 ("use statement [...] has no effect" depends on leading
    backslash). (Nikita)
  . Fixed bug #67314 (Segmentation fault in gc_remove_zval_from_buffer).
    (Dmitry)
  . Fixed bug #68652 (segmentation fault in destructor). (Dmitry)
  . Fixed bug #69419 (Returning compatible sub generator produces a warning).
    (Nikita)

- cURL:
  . Fixed bug #68739 (Missing break / control flow). (Laruence)

- Ereg:
  . Fixed bug #68740 (NULL Pointer Dereference). (Laruence)

- ODBC:
  . Fixed bug #69354 (Incorrect use of SQLColAttributes with ODBC 3.0).
    (Anatol)
  . Fixed bug #69474 (ODBC: Query with same field name from two tables returns
    incorrect result). (Anatol)

- OpenSSL:
  . Fixed bug #69402 (Reading empty SSL stream hangs until timeout).
    (Daniel Lowrey)

16 Apr 2015, PHP 5.5.24

- Apache2handler:
  . Fixed bug #69218 (potential remote code execution with apache 2.4
    apache2handler). (Gerrit Venema)

- Core:
  . Fixed bug #66609 (php crashes with __get() and ++ operator in some cases).
    (Dmitry, Laruence)
  . Fixed bug #67626 (User exceptions not properly handled in streams). 
    (Julian)
  . Fixed bug #68021 (get_browser() browser_name_regex returns non-utf-8
    characters). (Tjerk)
  . Fixed bug #68917 (parse_url fails on some partial urls). (Wei Dai)
  . Fixed bug #69134 (Per Directory Values overrides PHP_INI_SYSTEM
    configuration options). (Anatol Belski)
  . Additional fix for bug #69152 (Type confusion vulnerability in
    exception::getTraceAsString). (Stas)
  . Fixed bug #69212 (Leaking VIA_HANDLER func when exception thrown in
    __call/... arg passing). (Nikita)
  . Fixed bug #69221 (Segmentation fault when using a generator in combination